--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,7 +35,7 @@
 				<div class="navbar-end">
 					<div class="navbar-item" id="navbar-item-language" style="padding-right: 0px;">
 						<a class="button is-white is-outlined" href="#footer"
-							style="width: 40px;"><i style="padding-right: 0px;"
+							style="width: 40px;"><i style="padding-right: 0px; color: white;" 
 							class="fas fa-globe"></i></a>
 					</div>
 					<div class="navbar-item" id="navbar-item-register">
