--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -81,7 +81,8 @@
 						<div class="register-warning"
 							th:text="#{register.asterisk-warning}"></div>
 
-						<div class="field is-grouped" style="display: block;">
+						<div class="field is-grouped"
+							style="display: flex; justify-content: flex-start;">
 							<div class="control">
 								<button class="button is-link" type="submit" th:text="#{submit}"></button>
 							</div>
