--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -44,8 +44,7 @@
 
 				<div
 					style="width: 100%; margin-bottom: 12px; display: flex; align-items: center; justify-content: center;">
-					<span class="tag is-light" style="font-size: 1em;"
-						th:text="#{or}"></span>
+					<span class="tag is-light" style="font-size: 1em;" th:text="#{or}"></span>
 				</div>
 
 				<div class="box">
@@ -134,7 +133,8 @@
 						<div class="register-warning"
 							th:text="#{register.asterisk-warning}"></div>
 
-						<div class="field is-grouped" style="display: block;">
+						<div class="field is-grouped"
+							style="display: flex; justify-content: flex-start;">
 							<div class="control">
 								<button class="button is-link" type="submit" th:text="#{submit}"></button>
 							</div>
