--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -56,7 +56,7 @@
 							<label class="label" th:text="#{first-name}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="control">
-								<input class="input" type="text" name="firstName" required>
+								<input class="input" type="text" name="firstName" maxlength="12" required>
 							</div>
 						</div>
 						<div class="field">
