Change dating preference to intention

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -327,7 +327,7 @@
 				class="notification is-warning full-width" th:if="${noDescription}"
 				th:text="#{profile.warning.no-description}" href="#description-field"></a> <a
 				class="notification is-warning full-width" th:if="${noIntention}"
-				th:text="#{profile.warning.no-dating-preference}" href="#intention-field"></a> <a
+				th:text="#{profile.warning.no-intention}" href="#intention-field"></a> <a
 				class="notification is-warning full-width" th:if="${noGender}"
 				th:text="#{profile.warning.no-gender-preference}" href="#gender-field"></a> <a
 				class="notification is-warning full-width" th:if="${noLocation}"
