--- a/src/main/resources/static/css/messageDetail.css
+++ b/src/main/resources/static/css/messageDetail.css
@@ -55,6 +55,12 @@
 	padding-bottom: 24px;
 }
 
+@media only screen and (max-width: 500px) {
+	.profile-pic {
+		border-radius: 290486px !important;
+	}
+}
+
 @media only screen and (max-height: 900px) {
 	#top {
 		height: 60px;
@@ -67,6 +73,7 @@
 		font-size: 1.7em
 	}
 }
+
 
 @media only screen and (max-width: 400px) {
 	.section {
