--- a/src/main/resources/static/css/notification.css
+++ b/src/main/resources/static/css/notification.css
@@ -54,9 +54,9 @@
 		border-radius: 0px;
 		padding: 8px;
 		margin-bottom: 0px;
-		border-top: none;
-		border-left: none;
-		border-right: none;
+		border-top: none !important;
+		border-left: none !important;
+		border-right: none !important;
 		height: 112px;
 	}
 }
