--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-hand-holding-usd"></i>
+							<i class="fa fa-hand-holding-usd" id="icon-free"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
@@ -67,7 +67,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-door-open"></i>
+							<i class="fa fa-door-open" id="icon-open-source"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
@@ -84,7 +84,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-lock"></i>
+							<i class="fa fa-lock" id="icon-private"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
@@ -104,7 +104,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-ad"></i>
+							<i class="fa fa-ad" id="icon-ad-free"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
@@ -117,7 +117,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-microchip"></i>
+							<i class="fa fa-microchip" id="icon-technology"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
@@ -130,7 +130,7 @@
 				<div class="column is-4">
 					<div class="card is-shady">
 						<div class="card-image has-text-centered">
-							<i class="fa fa-child"></i>
+							<i class="fa fa-child" id="icon-for-you"></i>
 						</div>
 						<div class="card-content">
 							<div class="content">
