--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -59,14 +59,16 @@
 										th:onclick="deleteImage([[${img.id}]])" />
 								</div>
 							</div>
+							<th:block th:if="${#lists.size(user.images) != imageMax}">
 							<div class="swiper-slide center-parent" style="height: 100%;"
 								th:if="${user.profilePicture}">
-								<div th:if="${#lists.size(user.images) != imageMax}"
+								<div
 									id="addImageDiv" class="center-parent button"
 									style="min-width: 174px; min-height: 200px;">
 									<i class="fa fa-plus fa-4x"></i>
 								</div>
 							</div>
+							</th:block>
 							<input id="addImageInput" type="file" accept="image/*"
 								style="display: none">
 
