--- a/src/main/resources/static/css/lib/pulse-button.css
+++ b/src/main/resources/static/css/lib/pulse-button.css
@@ -13,7 +13,7 @@ MIT License
 }
 
 .pulse-button {
-	 box-shadow: 0 0 0 0 rgba(50, 152, 220, 0.7);
+	 box-shadow: 0 0 0 0 rgba(189, 189, 189, 1.0);
 
 	 -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
 	 -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
@@ -25,7 +25,7 @@ MIT License
 	 -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
 }
 
-@-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+@-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px;}}
+@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px;}}
+@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px;}}
+@keyframes pulse {to {box-shadow: 0 0 0 45px;}}
