Show blocked users in profile

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,7 +32,7 @@
 				<div class="navbar-end">
 					<div class="navbar-item" id="navbar-item-language" style="padding-right: 0px;">
 						<a class="button is-white is-outlined" onclick="onLanguageButtonClicked()"
-							style="width: 40px;"><i style="padding-right: 0px; color: white;"
+							style="width: 40px; height: 40px;"><i style="padding-right: 0px; color: white;"
 								class="fas fa-globe"></i></a>
 					</div>
 					<div class="navbar-item" id="navbar-item-register">
