Shorten message preview in messages.html. Make messages in messages.html bigger.

--- a/src/main/resources/static/css/notification.css
+++ b/src/main/resources/static/css/notification.css
@@ -94,8 +94,8 @@
 		border-right: none !important;
 		height: 72px;
 	}
-	.card.is-horizontal .card-content {
-		font-size: 0.6em;
+	.message-preview {
+		font-size: 0.9em;
 	}
 }	
 	
